@@ -268,7 +268,7 @@ This is fine as long as the documentation stays on only a single
 computer, but is problematic when preparing documentation that should be
 used on multiple computers, e.g., when creating a distribution archive of
 a GAP package.<Br/>
-Thus, if a relative path is provided via this option (or if it is set to true,
+Thus, if a relative path is provided via this option (or if it is set to <K>true</K>,
 in which case the relative path <F>../../..</F> is used), then &AutoDoc;
 and &GAPDoc; attempt to replace all absolute paths in references to GAP
 manuals by paths based on this relative path.<P/>
@@ -279,10 +279,18 @@ BookName='gapdoc'/><P/>
 </Item>
 </List>
 </Item>
+<Mark><A>example_test</A></Mark>
+<Item>
+If set to <K>true</K>, then all manual examples are extracted and placed
+into files <F>tst/PACKAGENAME01.tst</F>, <F>tst/PACKAGENAME02.tst</F>, ...
+and so on, with one file for each chapter.
+</Item>
 <Mark><A>maketest</A></Mark>
 <Item>
-The maketest item can be true or a record. When it is true,
-a simple maketest.g is created in the main package directory,
+<Emph>This option is deprecated. Please use <C>example_test</C> instead.</Emph>
+<P/>
+Either <K>true</K> or a record. When it is <K>true</K>,
+a simple <F>maketest.g</F> file is created in the main package directory,
 which can be used to test the examples from the manual. As a record,
 the entry can have the following entries itself, to specify some options.
 <List>
