@@ -5,6 +5,9 @@ gap> START_TEST( "worksheets.tst" );
 
 #
 gap> AUTODOC_TestWorkSheet("general");
+Extracting manual examples for General Test package ...
+1 chapters detected
+Chapter 1 : extracted 1 examples
 
 #
 gap> STOP_TEST( "worksheets.tst" );
